@@ -137,17 +137,16 @@ GO
   </data>
 </root>]]></File>
 				</Directory>
-				<Directory name="components">
+				<Directory name="Data">
 <!--<FileTemplateReference TemplateID="DotNetNuke PetaPOCO class" name="${ProjectName}Info.cs" />-->
 <File name="${ProjectName}Info.cs" AddStandardHeader="True"><![CDATA[using System;
 using System.Linq;
-
 using DotNetNuke.Data;
 using DotNetNuke.ComponentModel.DataAnnotations;
 using DotNetNuke.Entities.Portals;
 using DotNetNuke.Entities.Users;
 
-namespace ${ProjectName}
+namespace ${ProjectName}.Data
 {
 	// More attributes for class:
 	// Set caching for table: [Cacheable("${ProjectName}_${Name}s", CacheItemPriority.Default, 20)] 
@@ -231,6 +230,7 @@ using DotNetNuke.UI.Skins;
 using DotNetNuke.Services.Localization;
 using R7.DotNetNuke.Extensions;
 using R7.DotNetNuke.Extensions.Data;
+using ${ProjectName}.Data;
 
 namespace ${ProjectName}
 {
