@@ -1,6 +1,8 @@
 ﻿{{0.5.0}}
 * Module and skinobject templates use R7.DotNetNuke.Extensions library (via NuGet).
 * Fix AssemblyInfo created inside Properties/Properties folder.
+* Move controller and settings classes to Components namespace/folder.
+* Move POCO-class to Data namespace/folder.
 
 {{0.4.0, 2016-02-01}}
 * First release on addins.monodevelop.com
